# Ankou

./: .gitignore  LICENSE  README.md  quickstart.py
agents/anomaly/: README.md  binding.gyp  build-payload.js  build.bat  build.sh  inject.cc  main.js  package-lock.json  package.json
agents/geist/: build.bat  build.sh  main.go
agents/geist/geist-golang/: build.bat  build.sh  go.mod  go.sum  main.go  privileges.go
agents/geist/geist-rust/: .gitignore  Cargo.toml  build.bat  build.rs  build_config.env
agents/geist/geist-rust/src/: gatesofhell.rs  inject.rs  main.rs  obfuscate.rs
agents/geist/gesit-rust/: Cargo.toml  build.bat  build.sh  build_config.env
agents/geist/gesit-rust/src/: inject.rs  main.rs  obfuscate.rs
agents/phantasm/: build.bat  build.sh  go.mod  go.sum  main.go
agents/phantasm/phantasm-golang/: build.bat  build.sh  go.mod  go.sum  main.go  privileges.go
agents/phantasm/phantasm-rust/: .gitignore  Cargo.toml  build.bat  build.rs
agents/phantasm/phantasm-rust/src/: gatesofhell.rs  inject.rs  main.rs  obfuscate.rs
agents/shade/: build.bat  build.sh  go.mod  main.go
agents/wraith/: Cargo.toml  build.bat  build.rs  build.sh
agents/wraith/src/: inject.rs  main.rs  obfuscate.rs
docs/: adding-new-agent.md  agents.md  configuration.md  ghost-relay-new-transport.md  overview.md
frontend/: .gitignore  BUILD.md  electron-builder.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.js
frontend/src/: App.css  App.tsx
frontend/src/components/: AI.css  AI.tsx  AgentsTable.tsx  AutonomousAgent.css  AutonomousAgent.tsx  BottomTerminal.tsx  ContextMenu.css  ContextMenu.tsx  DeleteHandlerModal.tsx  DeleteListenerModal.tsx  DeleteScriptModal.css  DeleteScriptModal.tsx  FileUpload.css  FileUpload.tsx  FileUploadModal.css  FileUploadModal.tsx  GlobalTerminal.tsx  Handlers.css  Handlers.tsx  Listeners.css  Listeners.tsx  LoadingSpinner.tsx  LoginScreen.tsx  Logs.css  Logs.tsx  Loot.css  Loot.tsx  Operators.tsx  PolyEngine.css  PolyEngine.tsx  RecipeManager.css  RecipeManager.tsx  RemoveAgentModal.css  RemoveAgentModal.tsx  Scripts.css  Scripts.tsx  ShellcodeInjectModal.css  ShellcodeInjectModal.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ServerContext.tsx
frontend/src/data/: agents.ts
frontend/src/hooks/: useAutonomyRunner.ts  useGlobalTerminal.ts  useRecipes.ts  useTerminal.ts  useWebSocket.ts
frontend/src/utils/: aiSettings.ts  prompts.ts
ghost-relay/: README.md  accept.go  accept_anomaly.go  accept_geist.go  accept_https.go  accept_phantasm.go  accept_quic.go  accept_shade.go  accept_ssh.go  go.mod  go.sum  main.go  relay.config.example
ghost-relay/internal/accept/: base.go  common.go  https.go  interface.go  quic.go  ssh.go
ghost-relay/internal/config/: config.go
server/: agent_handlers.go  ankou.config.example  database.go  global_commands.go  go.mod  go.sum  graphql.go  listeners.go  loot.go  main.go  server_config.json.example  websocket.go
server/agent_handlers/: handler_anomaly.json  handler_geist.json  handler_phantasm.json  handler_shade.json  handler_wraith.json
server/listeners/: listener_example.json
